--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -21,29 +21,29 @@
 }
 
 img {
-    max-width : 100%;
-    width: 100%;
-    height: 100%; 
-    position: relative;
+  max-width : 100%;
+  width: 100%;
+  height: 100%; 
+  position: relative;
 }
 
 .cardImg1 {
-    object-fit: cover;
-    height: 150px;
+  object-fit: cover;
+  height: 150px;
 }
 
 #cuerpo {
 
-    width :70%; margin : 0 auto;
-    margin-bottom: 10vh
-    
+  width :70%; margin : 0 auto;
+  margin-bottom: 10vh
+  
 }
 
 
 #cuerpo2{
 
-    background-color: white;
-    min-height: 95vh;
+  background-color: white;
+  min-height: 95vh;
 }
 
 #body{
@@ -75,76 +75,93 @@ img {
     display : none;
   }
 
-  }
+}
 
-  @media (min-width: 1920px) {
+@media (min-width: 1920px) {
 
   .bannerIzq{
     margin-left : 2vh;
   }
 
-    .bannerDer{
+  .bannerDer{
     margin-right : 2vh;
   }
 
+}
+
+@media handheld, only screen and (max-width: 767px) {
+  .barras {
+    display:none;
   }
 
-  @media (max-width: 1095px) {
+  #cuerpo {
 
-    .table{
-      width : 100%;
-      display : block;
-       overflow-x: auto;
-       overflow-y: hidden;
-    }
+    width :100%; margin : 0 auto;
+    margin-bottom: 10vh
+    
   }
 
-  .btn1{
-    width: 200px;
-    height: 35px;
-    margin-left: 1vh;
-    margin-bottom : 2vh;
-    margin-top : 1vh;
+}
+
+
+@media (max-width: 1095px) {
+
+  .table{
+    width : 100%;
+    display : block;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+}
+
+
+
+.btn1{
+  width: 200px;
+  height: 35px;
+  margin-left: 1vh;
+  margin-bottom : 2vh;
+  margin-top : 1vh;
 
   font-size : 1.5vh;
 
-  }
+}
 
-  .comentario{
-    border : solid 1px #C2C0BF;
-    margin-bottom : 1vh;
-  }
+.comentario{
+  border : solid 1px #C2C0BF;
+  margin-bottom : 1vh;
+}
 
-  .g-mb-15{
-    margin : 1vh 1vh 1vh 1vh;
-  }
+.g-mb-15{
+  margin : 1vh 1vh 1vh 1vh;
+}
 
-  #form3{
-    margin-left: 1vh;
-    margin-right : 1vh;
-  }
+#form3{
+  margin-left: 1vh;
+  margin-right : 1vh;
+}
 
-  .com{
-    margin-left : 1vh;
-  }
+.com{
+  margin-left : 1vh;
+}
 
-  .logo {
+.logo {
 
-    width: 40px; 
-    height: 40px;
+  width: 40px; 
+  height: 40px;
 
-  }
+}
 
-  .banner {
+.banner {
 
-    height: 100px; 
-    height: 215px;
-    object-fit: cover;
-  }
+  height: 100px; 
+  height: 215px;
+  object-fit: cover;
+}
 
-  .buscador {
+.buscador {
 
-    width: 50%; 
-    margin : 0 auto
+  width: 50%; 
+  margin : 0 auto
 
-  }
+}
